--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,34 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="col-md-8 col-md-offset-2">
+  <div class="jumbotron">
+    <h1>Find your best design talent.</h1>
+    <p>Design Square is a curated network of the best in design. Welcome to an easier way of hiring your best design team.</p>
+    
 
-<%= link_to 'Sign up as Member', new_member_path %>
-<br>
-<%= link_to 'Sign up as Creative', new_creative_path %>
+   <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup">
+      <form action="//designdirectorygroup.us6.list-manage.com/subscribe/post?u=036e706f380c4e0fbdcf3d424&amp;id=466c414712" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-inline" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+        
+      <div class="form-group">
+        <label class="sr-only" for="mce-EMAIL">Email address </label>
+        <input type="email" value="" name="EMAIL" class="string email optional form-control" id="mce-EMAIL" placeholder="email address…">
+      </div>
+        <div id="mce-responses" class="form-group">
+          <div class="response" id="mce-error-response" style="display:none"></div>
+          <div class="response" id="mce-success-response" style="display:none"></div>
+        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;"><input type="text" name="b_036e706f380c4e0fbdcf3d424_466c414712" tabindex="-1" value=""></div>
+          <div class="form-group"><input type="submit" value="Request early invite" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default"></div>
+          </div>
+      </form>
+      </div>
+  <!--End mc_embed_signup-->
+
+  </div>
+
+  <div>
+    <%= link_to "<button type='button' class='btn'>I'm a creative</button>".html_safe, new_creative_path %>
+    <%= link_to "<button type='button' class='btn btn-grey'>I hire creatives</button>".html_safe, new_member_path %>
+  </div>
+</div>
+
