--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <%= render 'layouts/nav' %>
     <%= render 'layouts/flash' %>
 
-    <main class="main container">
+    <main class="container-fluid main-container">
     <%= yield %>
     </main>
     
