--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -84,6 +84,14 @@ ul.dropdown-menu {
   background-color: #a7a9ac;
 }
 
+.btn-blue {
+  background-color: #58b4f6;
+}
+
+.btn-blue:hover, .btn-blue:focus, .btn-blue.focus, .btn-blue:active, .btn-blue.active, .open > .btn-blue.dropdown-toggle {
+  background-color: #3fa9f5;
+}
+
 .form-inline {
   margin-bottom: 15px;
 }
@@ -109,3 +117,56 @@ ul.dropdown-menu {
   font-size: 19px;
   font-weight: 200;
 }
+
+main.container-fluid.main-container {
+  padding: 50px 0px 0px;
+}
+
+.container-fluid.profile-header {
+  height: 300px;
+  background-color: #3fa9f5;
+}
+
+.secondary-nav.navbar-header {
+  width: inherit;
+}
+
+
+.nav > li > a:hover, .nav > li > a:focus {
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a {
+  color: #000;
+}
+
+a:hover, a:focus, a.focus, a:active, a.active, .open > a.dropdown-toggle {
+  color: #ff3586;
+}
+
+ul.nav.underscore.navbar-nav > li > a:hover, ul.nav.underscore.navbar-nav > li > a:focus, ul.nav.underscore.navbar-nav > li > a.focus, ul.nav.underscore.navbar-nav > li > a:active, ul.nav.underscore.navbar-nav > li > a.active, .open > ul.nav.underscore.navbar-nav > li > a.dropdown-toggle {
+  border-bottom: 4px #000 solid;
+  color: #000;
+}
+
+ul.nav.navbar-nav > li {
+  padding-left: 5px;
+}
+
+button.btn.navbar-btn {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+nav.navbar.navbar-profile.navbar-static-top {
+  border-bottom: 1px #ccc solid;
+}
+
+
+
+
+
+
+
+
