--- a/app/views/creatives/_profile_left.html.erb
+++ b/app/views/creatives/_profile_left.html.erb
@@ -1,3 +1,7 @@
+  <div class="profile-image"> 
+    <%= image_tag @creative.avatar.url(:medium) %>
+  </div>
+  
   <h2> <%= @creative.name %></h2>
 
   <h5> Username: </h5>
