--- a/app/views/creatives/edit.html.erb
+++ b/app/views/creatives/edit.html.erb
@@ -4,10 +4,18 @@
 <h5> Username: </h5>
 <h3> <%= @creative.username %></h3>
 
-<%= simple_form_for @creative do |f| %>
+<%= simple_form_for @creative, url: creative_path(@creative), method: :patch do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <h5> Profile Photo </h5>
+    <% if current_user.avatar? %>
+        <div class="profile-image"> 
+            <%= image_tag @creative.avatar.url(:medium) %>
+        </div>
+    <% else %>
+        <%= f.input :avatar, as: :file, label: false %></h3>
+    <% end %>
 
     <h5> Latest Job Title: </h5>
     <h3> <%= f.input :title, label: false %> </h3>
