--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
 <% if notice || alert %>
-  <div class="container">
+  <div class="container flash">
     <% if notice %>
       <notice class="row">
         <p class="notice"><%= notice %></p>
