--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,25 +1,36 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
   <div class="container">
-    <div class="primary-nav navbar-header">
-
-      <a class="navbar-brand" href="/">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header primary-nav">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+       <a class="navbar-brand" href="/">
         <div class="brand-logo"><%= render 'layouts/brand_logo' %></div>
         <div class="brand-mark"><%= render 'layouts/brand_mark' %></div>
       </a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      
       <ul class="nav navbar-nav navbar-right">
 
         <li class='log-in'>
           <% if user_signed_in? %>
             <li class="dropdown dropdown-settings">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle avatar" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag current_user.avatar.url(:icon) %></a>
               <ul class="dropdown-menu" role="menu">
                 <li><%= link_to 'My Profile', user_path(current_user) %></li>
                 <li><%= link_to 'Projects', projects_path %></li>
                 <li><%= link_to 'Collections', collections_path %></li>
                 <li><%= link_to 'Messages', messages_path %></li>
                 <li><%= link_to 'Invites', invites_path %></li>
-                <li><%= link_to 'Settings', edit_user_registration_path(current_user) %></li>
+                <li class="divider"></li>
+                <li><%= link_to 'Settings', edit_user_registration_path %></li>
                 <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
               </ul>
             </li>
@@ -31,7 +42,7 @@
         <% if user_signed_in? %>
         <li class="dropdown dropdown-create">
           
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag 'create_bttn.svg' %></a>
+            <a href="#" class="dropdown-toggle create" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag 'create_bttn.svg' %></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to 'New Post', new_post_path %></li>
             <li><%= link_to 'New Project', new_project_path %></li>
@@ -41,7 +52,6 @@
         </li>
         <% end %>
       </ul>
-
-    </div>
-  </div>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
