--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
 
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
-    <%= link_to "<button type='button' class='btn btn-grey'>Cancel</button>".html_safe, root_path %>
+    <%= link_to "<button type='button' class='btn btn-grey'>Cancel</button>".html_safe, cancel_user_registration_path %>
   </div>
 <% end %>
 
