--- a/app/views/users/members/_show.html.erb
+++ b/app/views/users/members/_show.html.erb
@@ -1,18 +1,18 @@
 
-<%= render 'profile_header' %>
-<%= render 'profile_nav' %>
+<%= render 'users/members/profile_header' %>
+<%= render 'users/members/profile_nav' %>
 
 <div class="container-fluid profile-main">
   <div class="container">
     <div class="col-md-3 ">
-      <%= render 'profile_left' %>
+      <%= render 'users/members/profile_left' %>
     </div>
     <div class="col-md-9">
       <div class="col-md-8">
-        <%= render 'profile_main' %>
+        <%= render 'users/members/profile_main' %>
       </div>
       <div class="col-md-4">
-        <%= render 'profile_right' %>
+        <%= render 'users/members/profile_right' %>
       </div>
     </div>
   </div>
