--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,11 +1,11 @@
 <div class="col-md-6 col-md-offset-3">
-<h2>New Post</h2>
+<h2>New Project</h2>
 
-<%= simple_form_for @post do |f| %>
+<%= simple_form_for @project do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :post, required: true, autofocus: true, label: false %>
+    <%= f.input :name, required: true, autofocus: true, label: false %>
     
     <%= f.input :user_id, as: :hidden, input_html: {value: current_user.id} %>
   </div>
