--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -24,7 +24,11 @@
             <li class="dropdown dropdown-settings">
               <a href="#" class="dropdown-toggle avatar" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag current_user.avatar.url(:icon) %></a>
               <ul class="dropdown-menu" role="menu">
-                <li><%= link_to 'My Profile', user_path(current_user) %></li>
+                <li><%= link_to user_path(current_user) do %>
+                  <b><%= current_user.name %></b><br>
+                  View Profile
+                <% end %></li>
+                <li class="divider"></li>
                 <li><%= link_to 'Projects', projects_path %></li>
                 <li><%= link_to 'Collections', collections_path %></li>
                 <li><%= link_to 'Messages', messages_path %></li>
