--- a/app/views/users/creatives/shared/_profile_header.html.erb
+++ b/app/views/users/creatives/shared/_profile_header.html.erb
@@ -1,3 +1,9 @@
 <div class="container-fluid profile-header creative">
-
+    <div class="container profile-header">
+     <div class="col-md-3 ">
+      <div class="profile-image"> 
+        <%= image_tag @user.avatar.url(:large) %>
+      </div>
+    </div>
+  </div>
 </div>
