--- a/app/views/positions/new.html.erb
+++ b/app/views/positions/new.html.erb
@@ -7,10 +7,18 @@
   <div class="form-inputs">
     <%= f.input :company_name, required: true %>
     <%= f.input :title, required: true %>
-    <%= f.input :locaiton, required: true %>
-    <%= f.input :description, required: true %>
-    <%= f.input :start_date, required: true %>
-    <%= f.input :end_date, required: true %>
+    <%= f.input :location, required: true %>
+    <%= f.input :description %>
+    <div class="form-inline">
+      <%= f.input :start_date, required: true, as: :date, start_year: Date.today.year - 1,
+                                    end_year: Date.today.year - 90, discard_day: true,
+                                    order: [:month, :year] %>
+    </div>
+    <div class="form-inline">
+      <%= f.input :end_date, required: true, as: :date, start_year: Date.today.year - 1,
+                                    end_year: Date.today.year - 90, discard_day: true,
+                                    order: [:month, :year] %>
+    </div>
     
     <%= f.input :user_id, as: :hidden, input_html: {value: current_user.id} %>
   </div>
