--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -61,6 +61,10 @@ a.dropdown-toggle.avatar img, .profile-image img {
   border-radius: 4px;
 }
 
+.btn .btn-wide {
+  width: 100%;
+}
+
 .btn {
   color: #fff;
   background-color: #ff5398;
