--- a/app/views/devise/registrations/_creative_form.html.erb
+++ b/app/views/devise/registrations/_creative_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :email, autofocus: true, placeholder: "Email address", required: true %>
   <%= f.input :password, placeholder: "Password", required: true %>
   <%= f.input :password_confirmation, placeholder: "Confirm Password", required: true %>
+  <%= f.input :invitation_token, placeholder: "invitation token", required: true %>
   <div class="form-inline">
     <%= f.input :first_name, placeholder: "First name", required: true %>
     <%= f.input :last_name, placeholder: "Last name", required: true %>
