--- a/app/views/devise/registrations/_member_form.html.erb
+++ b/app/views/devise/registrations/_member_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :last_name, placeholder: "Last name", required: true %>
   </div>
   <%= f.input :username, placeholder: "Username", required: true %>
-  <%= f.input :role, as: :hidden, input_html: {value: params[:role]} %> 
+  <%= f.input :role, as: :hidden, input_html: {value: params[:user][:role]} %> 
 
   <%= f.input :company, placeholder: "Company", required: true %>
   <%= f.input :website, placeholder: "Company website", required: true %>
