--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -32,7 +32,7 @@
                 <li><%= link_to 'Projects', projects_path %></li>
                 <li><%= link_to 'Collections', collections_path %></li>
                 <li><%= link_to 'Messages', messages_path %></li>
-                <li><%= link_to 'Invites', invites_path %></li>
+                <li><%= link_to 'Invites', new_user_invitation_path %></li>
                 <li class="divider"></li>
                 <li><%= link_to 'Settings', edit_user_registration_path %></li>
                 <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
